--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                     <div class="card">
                                         <img class="card-image" src="images/members/brexit.jpg" alt="alternative">
                                         <div class="card-body">
-                                            <p class="testimonial-text">makes models and watches anime</p>
+                                            <p class="testimonial-text">A bossy teenager who makes models,works out,occasionally spars when they have the chance, and watches anime.</p>
                                             <p class="testimonial-author"><a class="turquoise" href="https://twitter.com/Brexit_Box?s=09">Brexit_Box</a> - Model Maker</p>
                                         </div>
                                     </div>
