--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                     <!-- Video Preview -->
                     <div class="image-container">
                         <div class="video-wrapper">
-                            <a class="popup-youtube" href="https://youtu.be/PWFkyu-TZV0" data-effect="fadeIn">
+                            <a class="popup-youtube" href="https://www.youtube.com/embed/PWFkyu-TZV0" data-effect="fadeIn">
                                 <img class="img-fluid" src="images/Dragon.png" alt="alternative">
                                 <span class="video-play-button">
                                     <span></span>
@@ -428,8 +428,7 @@
                 <div class="col-lg-6 offset-lg-3">
                     
                     <!-- Contact Form -->
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/PWFkyu-TZV0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <!-- end of contact form -->
+                  <!-- end of contact form -->
 
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
