--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                     <!-- Video Preview -->
                     <div class="image-container">
                         <div class="video-wrapper">
-                            <a class="popup-youtube" href="https://www.youtube.com/embed/PWFkyu-TZV0" data-effect="fadeIn">
+                            <a class="popup-youtube" href="https://www.youtube.com/watch?v=PWFkyu-TZV0" data-effect="fadeIn">
                                 <img class="img-fluid" src="images/Dragon.png" alt="alternative">
                                 <span class="video-play-button">
                                     <span></span>
