--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                         <img class="card-image" src="images/members/foxfocus.png" alt="alternative">
                                         <div class="card-body">
                                             <p class="testimonial-text">A 14 year old modeler, She draws, do creative writing, yoga, and comic reading.</p>
-                                            <p class="testimonial-author">FoxFocus - Model Maker</p>
+                                            <p class="testimonial-author"><a class="turquoise" href="https://twitter.com/FoxFocus5">FoxFocus</a> - Model Maker</p>
                                         </div>
                                     </div>
                                 </div> <!-- end of swiper-slide -->
@@ -199,7 +199,7 @@
                                         <img class="card-image" src="images/members/JustinDaNub.jpg" alt="alternative">
                                         <div class="card-body">
                                             <p class="testimonial-text">A simple boy who loves texturing,modeling and drawing.</p>
-                                            <p class="testimonial-author">JustineDaNub - Model Maker</p>
+                                            <p class="testimonial-author"><a class="turquoise" href="https://twitter.com/justinedanub">JustineDaNub</a> - Model Maker</p>
                                         </div>
                                     </div>
                                 </div> <!-- end of swiper-slide -->
