--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="We are Dragon Force Studio,we develope quality addons for minecraft bedrock">
+    <meta name="description" content="We are Dragon Force Studio,we develope quality addons, maps, texture packs, and skins for minecraft bedrock">
     <meta name="author" content="zahf22">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
@@ -74,11 +74,15 @@
 
                 <!-- Dropdown Menu -->          
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle page-scroll" href="#details" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">DETAILS</a>
+                    <a class="nav-link dropdown-toggle page-scroll" href="#details" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">DOWNLOADS</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#"><span class="item-text">TERMS CONDITIONS</span></a>
+                        <a class="dropdown-item" href="#"><span class="item-text">SKINS</span></a>
                         <div class="dropdown-items-divide-hr"></div>
-                        <a class="dropdown-item" href="#"><span class="item-text">PRIVACY POLICY</span></a>
+                        <a class="dropdown-item" href="#"><span class="item-text">MAPS</span></a>
+                        <div class="dropdown-items-divide-hr"></div>
+                        <a class="dropdown-item" href="#"><span class="item-text">ADDONS</span></a>
+                        <div class="dropdown-items-divide-hr"></div>
+                        <a class="dropdown-item" href="#"><span class="item-text">TEXTURE PACKS</span></a>
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
