--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
                     <a class="nav-link page-scroll" href="#header">HOME <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#">FEATURES</a>
+                    <a class="nav-link page-scroll" href="#">MEMBERS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#">PREVIEW</a>
+                    <a class="nav-link page-scroll" href="#">APPLY</a>
                 </li>
 
                 <!-- Dropdown Menu -->          
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle page-scroll" href="#details" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">DOWNLOADS</a>
+                    <a class="nav-link dropdown-toggle page-scroll" href="#" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">DOWNLOADS</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="#"><span class="item-text">SKINS</span></a>
                         <div class="dropdown-items-divide-hr"></div>
@@ -88,7 +88,7 @@
                 <!-- end of dropdown menu -->
 
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#contact">CONTACT</a>
+                    <a class="nav-link page-scroll" href="#">ABOUT</a>
                 </li>
             </ul>
             <span class="nav-item social-icons">
@@ -137,7 +137,7 @@
                 <div class="col-lg-12">
                     
                     <div class="p-heading p-large">
-                        <h2>MEMBERS</h2>
+                        <h2>DFS MEMBERS</h2>
                     </div>
                 </div> <!-- end of col -->
             </div>
@@ -243,12 +243,11 @@
 
 
     <!-- Features -->
-    <div id="features" class="tabs">
+    <div id="dfs" class="tabs">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>FEATURES</h2>
-                    <div class="p-heading p-large">Dragon Force Studio develope quality</div>
+                    <h2>DRAGON FORCE STUDIO</h2>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
@@ -256,13 +255,13 @@
                 <!-- Tabs Links -->
                 <ul class="nav nav-tabs" id="lenoTabs" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" id="nav-tab-1" data-toggle="tab" href="#tab-1" role="tab" aria-controls="tab-1" aria-selected="true">MAPS</a>
+                        <a class="nav-link active" id="nav-tab-1" data-toggle="tab" href="#tab-1" role="tab" aria-controls="tab-1" aria-selected="false">MISSION</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="nav-tab-2" data-toggle="tab" href="#tab-2" role="tab" aria-controls="tab-2" aria-selected="false">TEXTURE PACKS</a>
+                        <a class="nav-link" id="nav-tab-2" data-toggle="tab" href="#tab-2" role="tab" aria-controls="tab-2" aria-selected="true">INTRODUCTION</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="nav-tab-3" data-toggle="tab" href="#tab-3" role="tab" aria-controls="tab-3" aria-selected="false">ADDONS</a>
+                        <a class="nav-link" id="nav-tab-3" data-toggle="tab" href="#tab-3" role="tab" aria-controls="tab-3" aria-selected="false">VISION</a>
                     </li>
                 </ul>
                 <!-- end of tabs links -->
@@ -400,7 +399,7 @@
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Our business partners <a class="turquoise" href="#your-link">startupguide.com</a></div>
+                                <div class="media-body">Our business partners <a class="turquoise" href="#your-link">TEAM ATLAS</a></div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
@@ -416,6 +415,12 @@
                             <a href="https://facebook.com/zahfgaming">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-facebook-f fa-stack-1x"></i>
+                            </a>
+                        </span>
+                        <span class="fa-stack">
+                            <a href="https://paypal.me/zahf22">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fab fa-paypal fa-stack-1x"></i>
                             </a>
                         </span>
                         <span class="fa-stack">
