--- a/index.html
+++ b/index.html
@@ -284,17 +284,8 @@
                                 
                                 <!-- Icon Cards Pane -->
                                 <div class="col-lg-4">
-                                    <div class="card left-pane">
-                                        <div class="card-body">
-                                            <div class="text-wrapper">
-                                                <h4 class="card-title">Test Title</h4>
-                                                <p>test description</p>
-                                            </div>
-                                            <div class="card-icon">
-                                                <i class="far fa-file-code"></i>
-                                            </div>
-                                        </div>
-                                    </div>
+Our mission is to create quality and unique addons, texture packs, skins, and maps to provide to Minecraft Bedrock players. As a team we aim to expand the potential of Minecraft to make it a more enjoyable experience. 
+
                                 </div>
                                 <!-- end of icon cards pane -->
                                 
