--- a/index.html
+++ b/index.html
@@ -278,13 +278,14 @@
 
                                 <!-- Image Pane -->
                                 <div class="col-lg-4">
-                                    <img class="img-fluid" src="images/Dragon.png" alt="alternative">
+                                    <img class="img-fluid" src="images/DFS.png" alt="alternative">
                                 </div>
                                 <!-- end of image pane -->
                                 
                                 <!-- Icon Cards Pane -->
                                 <div class="col-lg-4">
-Our mission is to create quality and unique addons, texture packs, skins, and maps to provide to Minecraft Bedrock players. As a team we aim to expand the potential of Minecraft to make it a more enjoyable experience. 
+Our mission is to create quality and unique addons, texture packs, skins, and maps to provide to Minecraft Bedrock players.
+<br>As a team we aim to expand the potential of Minecraft to make it a more enjoyable experience. 
 
                                 </div>
                                 <!-- end of icon cards pane -->
