--- a/index.html
+++ b/index.html
@@ -373,8 +373,14 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="footer-col">
-                        <h4>About Us</h4>
-                        <p>something to write</p>
+			    <h4>Donate</h4>
+                        <span class="fa-stack">
+                            <a href="https://paypal.me/zahf22">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fab fa-paypal fa-stack-1x"></i>
+                            </a>
+                        </span>
+			<p>Support us by donating</p>
                     </div>
                 </div> <!-- end of col -->
                 <div class="col-md-4">
@@ -399,12 +405,6 @@
                             <a href="https://facebook.com/zahfgaming">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-facebook-f fa-stack-1x"></i>
-                            </a>
-                        </span>
-                        <span class="fa-stack">
-                            <a href="https://paypal.me/zahf22">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-paypal fa-stack-1x"></i>
                             </a>
                         </span>
                         <span class="fa-stack">
