--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle page-scroll" href="#" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">DOWNLOADS</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#"><span class="item-text">SKINS</span></a>
+                        <a class="dropdown-item" href="https://dragon-force-studio.github.io/pages/skins/page_1/skin_1.html"><span class="item-text">SKINS</span></a>
                         <div class="dropdown-items-divide-hr"></div>
                         <a class="dropdown-item" href="#"><span class="item-text">MAPS</span></a>
                         <div class="dropdown-items-divide-hr"></div>
