--- a/pages/skins/page_1/skin_1.html
+++ b/pages/skins/page_1/skin_1.html
@@ -13,7 +13,7 @@
 	<meta property="og:site" content="" /> <!-- website link -->
 	<meta property="og:title" content=""/> <!-- title shown in the actual shared post -->
 	<meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
-	<meta property="og:image" content="images/dfs.jpg" /> <!-- image link, make sure it's jpg -->
+	<meta property="og:image" content="https://dragon-force-studio.github.io/images/dfs.jpg" /> <!-- image link, make sure it's jpg -->
 	<meta property="og:url" content="" /> <!-- where do you want your post to link to -->
 	<meta property="og:type" content="article" />
 
@@ -30,7 +30,7 @@
 	<link href="https://dragon-force-studio.github.io/css/styles.css" rel="stylesheet">
 	
 	<!-- Favicon  -->
-    <link rel="icon" href="images/pack_icon.png">
+    <link rel="icon" href="https://dragon-force-studio.github.io/images/pack_icon.png">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
     
@@ -51,7 +51,7 @@
         <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Leno</a> -->
 
         <!-- Image Logo -->
-        <a class="navbar-brand logo-image" href="index.html"><img src="images/DFS.svg" alt="DFS"></a> 
+        <a class="navbar-brand logo-image" href="https://dragon-force-studio.github.io/index.html"><img src="https://dragon-force-studio.github.io/images/DFS.svg" alt="DFS"></a> 
         
         <!-- Mobile Menu Toggle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
