--- a/pages/skins/page_1/skin_1.html
+++ b/pages/skins/page_1/skin_1.html
@@ -142,6 +142,7 @@
     <!-- end of breadcrumbs -->
     
     <!-- Testimonials -->
+    <div class="ex-basic-2">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -216,6 +217,7 @@
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
+    </div>
     <!-- end of testimonials -->
 
 
