--- a/pages/skins/page_1/skin_1.html
+++ b/pages/skins/page_1/skin_1.html
@@ -161,13 +161,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <img class="img-fluid" src="images/details-1-iphone.png" alt="alternative">
+                    <img class="img-fluid" src="images/twiggy_skin_pack.png" alt="alternative">
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
                     <div class="text-container">
-                        <h3>Goals Setting</h3>
+                        <h3>Ultimate Skin Pack</h3>
                         <p>Leno can easily help you track your personal development evolution if you take the time to properly setup your goals at the beginning of the training process. Check out the details</p>
-                        <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-1">LIGHTBOX</a>
+                        <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-1">Details</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -182,10 +182,10 @@
 		<div class="row">
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 			<div class="col-lg-6">
-				<img class="img-fluid" src="images/details-lightbox-1.png" alt="alternative">
+				<img class="img-fluid" src="images/twiggy_skin_pack.png" alt="alternative">
 			</div>
 			<div class="col-lg-6">
-				<h3>Goals Setting</h3>
+				<h3>Ultimate Skin Pack</h3>
 				<hr>
                 <p>Leno can easily help you track your personal development evolution if you take the time to set it up.</p>
                 <h4>User Feedback</h4>
