--- a/pages/skins/page_1/skin_1.html
+++ b/pages/skins/page_1/skin_1.html
@@ -161,7 +161,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <img class="img-fluid" src="images/twiggy_skin_pack.png" alt="alternative">
+                    <img class="img-fluid" src="images/twiggy_skin_pack_cover.png" alt="alternative">
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
                     <div class="text-container">
@@ -182,7 +182,7 @@
 		<div class="row">
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 			<div class="col-lg-6">
-				<img class="img-fluid" src="images/twiggy_skin_pack.png" alt="alternative">
+				<img class="img-fluid" src="images/twiggy_skin_pack_cover.png" alt="alternative">
 			</div>
 			<div class="col-lg-6">
 				<h3>Ultimate Skin Pack</h3>
