--- a/pages/skins/page_1/skin_1.html
+++ b/pages/skins/page_1/skin_1.html
@@ -165,8 +165,11 @@
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
                     <div class="text-container">
-                        <h3>Ultimate Skin Pack</h3>
-                        <p>Leno can easily help you track your personal development evolution if you take the time to properly setup your goals at the beginning of the training process. Check out the details</p>
+                        <h3>Ultimate Fantasy Skin Pack</h3>
+				<table>
+					<tr><td class="icon-cell"><i class="fas fa-square"></i></td><td>By:</td><td>Twiggy</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-square"></i></td><td>Minecraft Version:</td><td>1.1.13</td><td>1.14</td><td>1.16 beta</td></tr>
+				</table>
                         <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-1">Details</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
@@ -185,21 +188,17 @@
 				<img class="img-fluid" src="images/twiggy_skin_pack_cover.png" alt="alternative">
 			</div>
 			<div class="col-lg-6">
-				<h3>Ultimate Skin Pack</h3>
+				<h3>Ultimate Fantasy Skin Pack</h3>
 				<hr>
-                <p>Leno can easily help you track your personal development evolution if you take the time to set it up.</p>
-                <h4>User Feedback</h4>
-                <p>This is a great app which can help you save time and make your live easier. And it will help improve your productivity levels.</p>
-                <p>You should definitely give it a try when you need a good app.</p>
+				
+                <h4>Description:</h4>
+                <p>Ultimate Fantasy brings five new awesome skins! Become a mystic Blue Sorcerer. Or show off your inner wickedness with the Dark Sorcerer. From the divine Angle Girls enlightenment. To Hell Boys fiery endure. And Wind Girls otherworldly omen. This skin pack adds five amazing skins. Impress your friends with the new Ultimate Fantasy skin pack!</p>
+                <hr>
 				<table>
-					<tr><td class="icon-cell"><i class="fas fa-desktop"></i></td><td>Responsive layout</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-bullhorn"></i></td><td>Distinctive CTAs</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-image"></i></td><td>Image gallery slider</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-envelope"></i></td><td>Contact forms</td></tr>
-					<tr><td class="icon-cell"><i class="fab fa-font-awesome-flag"></i></td><td>FontAwesome icons</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Well-structured code</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-square"></i></td><td>By:</td><td>Twiggy</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-square"></i></td><td>Minecraft Version:</td><td>1.1.13</td><td>1.14</td><td>1.16 beta</td></tr>
 				</table>
-				<a class="btn-solid-reg" href="#your-link">DETAILS</a> <a class="btn-outline-reg mfp-close as-button" href="#details">BACK</a> 
+				<a class="btn-solid-reg" href="#your-link">DOWNLOAD</a>
 			</div>
 		</div> <!-- end of row -->
     </div> <!-- end of lightbox-basic -->
