--- a/pages/skins/page_1/skin_1.html
+++ b/pages/skins/page_1/skin_1.html
@@ -167,8 +167,8 @@
                     <div class="text-container">
                         <h3>Ultimate Fantasy Skin Pack</h3>
 				<table>
-					<tr><td class="icon-cell"><i class="fas fa-square"></i></td><td>By:</td><td>Twiggy</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-square"></i></td><td>Minecraft Version:</td><td>1.1.13</td><td>1.14</td><td>1.16 beta</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-square"></i></td><td>Creator:</td><td> Twiggy</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-square"></i></td><td>Version:</td><td> 1.13 - 1.14 - 1.16 beta</td></tr>
 				</table>
                         <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-1">Details</a>
                     </div> <!-- end of text-container -->
@@ -195,8 +195,8 @@
                 <p>Ultimate Fantasy brings five new awesome skins! Become a mystic Blue Sorcerer. Or show off your inner wickedness with the Dark Sorcerer. From the divine Angle Girls enlightenment. To Hell Boys fiery endure. And Wind Girls otherworldly omen. This skin pack adds five amazing skins. Impress your friends with the new Ultimate Fantasy skin pack!</p>
                 <hr>
 				<table>
-					<tr><td class="icon-cell"><i class="fas fa-square"></i></td><td>By:</td><td>Twiggy</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-square"></i></td><td>Minecraft Version:</td><td>1.1.13</td><td>1.14</td><td>1.16 beta</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-square"></i></td><td>Creator:</td><td> Twiggy</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-square"></i></td><td>Version:</td><td> 1.13 - 1.14 - 1.16 beta</td></tr>
 				</table>
 				<a class="btn-solid-reg" href="#your-link">DOWNLOAD</a>
 			</div>
