--- a/index.html
+++ b/index.html
@@ -311,18 +311,7 @@
                                 <!-- end of image pane -->
                                 
                                 <!-- Icon Cards Pane -->
-                                <div class="col-lg-4">
-                                    <div class="card left-pane">
-                                        <div class="card-body">
-                                            <div class="text-wrapper">
-                                                <h4 class="card-title">Test Title</h4>
-                                                <p>test description</p>
-                                            </div>
-                                            <div class="card-icon">
-                                                <i class="far fa-file-code"></i>
-                                            </div>
-                                        </div>
-                                    </div>
+                                <div class="col-lg-4"><div class="embed-responsive embed-responsive-16by9"> <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/137857207" allowfullscreen></iframe> </div>
                                 </div>
                                 <!-- end of icon cards pane -->
                                 
