--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                                 <!-- end of image pane -->
                                 
                                 <!-- Icon Cards Pane -->
-                                <div class="col-lg-4"><div class="embed-responsive embed-responsive-16by9"> <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/137857207" allowfullscreen></iframe> </div>
+                                <div class="col-lg-4"><div class="embed-responsive embed-responsive-16by9"> <iframe class="embed-responsive-item" src="https://rasecsantos22.wixsite.com/crafterskingdom" allowfullscreen></iframe> </div>
                                 </div>
                                 <!-- end of icon cards pane -->
                                 
