--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
                                     <div class="card">
                                         <img class="card-image" src="images/members/Code_Error.jpg" alt="alternative">
                                         <div class="card-body">
-                                            <p class="testimonial-text">I make models. Xbox gamer tag “killen V”.</p>
-                                            <p class="testimonial-author">Code_Error - Pixel Artist</p>
+                                            <p class="testimonial-text">A 15 year old who enjoys creating fantasy models and story writing. Xbox gamer tag “killen V”.</p>
+                                            <p class="testimonial-author">Code_Error - Model Maker</p>
                                         </div>
                                     </div>
                                 </div> <!-- end of swiper-slide -->
@@ -215,7 +215,7 @@
                                         <img class="card-image" src="images/members/ripper.jpeg" alt="alternative">
                                         <div class="card-body">
                                             <p class="testimonial-text">A 14 years old teenager who loves making models and texture. Good at textures and models i love drawing.</p>
-                                            <p class="testimonial-author">Legendaryʀɨքքɛʀ123456789 - Model Maker</p>
+                                            <p class="testimonial-author"><a class="turquoise" href="https://twitter.com/Legendaryrippe1?s=09">Legendaryʀɨքքɛʀ123456789</a> - Model Maker</p>
                                         </div>
                                     </div>
                                 </div> <!-- end of swiper-slide -->
