--- a/index.html
+++ b/index.html
@@ -196,6 +196,18 @@
                                     </div>
                                 </div> <!-- end of swiper-slide -->
                                 <!-- end of slide -->
+
+                                <!-- Slide -->
+                                <div class="swiper-slide">
+                                    <div class="card">
+                                        <img class="card-image" src="images/members/demigods.png" alt="alternative">
+                                        <div class="card-body">
+                                            <p class="testimonial-text">An artist with many dreams.</p>
+                                            <p class="testimonial-author"><a class="turquoise" href="#">XDemigodsX</a> - Model Maker</p>
+                                        </div>
+                                    </div>
+                                </div> <!-- end of swiper-slide -->
+                                <!-- end of slide -->
                                 
                                 <!-- Slide -->
                                 <div class="swiper-slide">
