--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 
                                 <!-- Image Pane -->
                                 <div class="col-lg-4">
-                                    <img class="img-fluid" src="images/logo_dfs.png" alt="alternative">
+                                    <iframe src="https://disweb.dashflo.net/channels/299881420891881473/355719584830980096" height="600" width="100%"></iframe>
                                 </div>
                                 <!-- end of image pane -->
                                 
