--- a/index.html
+++ b/index.html
@@ -249,7 +249,10 @@
         </div> <!-- end of container -->
     </div> <!-- end of slider-1 -->
     <!-- end of testimonials -->
-                                    <iframe src="http://craftersworld.000webhostapp.com" height="600" width="100%"></iframe>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                                    <iframe src="http://craftersworld.000webhostapp.com" height="600" width="100%"></iframe></div></div></div>
 
 
 
