--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
         </div> <!-- end of container --> 
     </div> <!-- end of tabs -->
     <!-- end of features -->
-
+<script data-ad-client="ca-pub-4398497222466431" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- Footer -->
     <div class="footer">
         <div class="container">
