--- a/pages/skins/page_1/skin_1.html
+++ b/pages/skins/page_1/skin_1.html
@@ -23,11 +23,11 @@
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i" rel="stylesheet">
-    <link href="https://dragon-force-studio.github.io/css/bootstrap.css" rel="stylesheet">
-    <link href="https://dragon-force-studio.github.io/css/fontawesome-all.css" rel="stylesheet">
-    <link href="https://dragon-force-studio.github.io/css/swiper.css" rel="stylesheet">
-	<link href="https://dragon-force-studio.github.io/css/magnific-popup.css" rel="stylesheet">
-	<link href="https://dragon-force-studio.github.io/css/styles.css" rel="stylesheet">
+    <link href="https://dragon-force-studio.com/css/bootstrap.css" rel="stylesheet">
+    <link href="https://dragon-force-studio.com/css/fontawesome-all.css" rel="stylesheet">
+    <link href="https://dragon-force-studio.com/css/swiper.css" rel="stylesheet">
+	<link href="https://dragon-force-studio.com/css/magnific-popup.css" rel="stylesheet">
+	<link href="https://dragon-force-studio.com/css/styles.css" rel="stylesheet">
 	
 	<!-- Favicon  -->
     <link rel="icon" href="https://dragon-force-studio.github.io/images/pack_icon.png">
@@ -283,14 +283,14 @@
     
     	
     <!-- Scripts -->
-    <script src="https://dragon-force-studio.github.io/js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
-    <script src="https://dragon-force-studio.github.io/js/popper.min.js"></script> <!-- Popper tooltip library for Bootstrap -->
-    <script src="https://dragon-force-studio.github.io/js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
-    <script src="https://dragon-force-studio.github.io/js/jquery.easing.min.js"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
-    <script src="https://dragon-force-studio.github.io/js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
-    <script src="https://dragon-force-studio.github.io/js/jquery.magnific-popup.js"></script> <!-- Magnific Popup for lightboxes -->
-    <script src="https://dragon-force-studio.github.io/js/morphext.min.js"></script> <!-- Morphtext rotating text in the header -->
-    <script src="https://dragon-force-studio.github.io/js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
-    <script src="https://dragon-force-studio.github.io/js/scripts.js"></script> <!-- Custom scripts -->
+    <script src="https://dragon-force-studio.com/js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
+    <script src="https://dragon-force-studio.com/js/popper.min.js"></script> <!-- Popper tooltip library for Bootstrap -->
+    <script src="https://dragon-force-studio.com/js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
+    <script src="https://dragon-force-studio.com/js/jquery.easing.min.js"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
+    <script src="https://dragon-force-studio.com/js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
+    <script src="https://dragon-force-studio.com/js/jquery.magnific-popup.js"></script> <!-- Magnific Popup for lightboxes -->
+    <script src="https://dragon-force-studio.com/js/morphext.min.js"></script> <!-- Morphtext rotating text in the header -->
+    <script src="https://dragon-force-studio.com/js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
+    <script src="https://dragon-force-studio.com/js/scripts.js"></script> <!-- Custom scripts -->
 </body>
 </html>
