--- a/index.html
+++ b/index.html
@@ -258,12 +258,10 @@
                 <ul class="nav nav-tabs" id="lenoTabs" role="tablist">
                     <li class="nav-item">
                         <a class="nav-link active" id="nav-tab-1" data-toggle="tab" href="#tab-1" role="tab" aria-controls="tab-1" aria-selected="false">MISSION</a>
-                    </li>
+                    </li><i class="fas fa-square"></i>
                     <li class="nav-item">
-                        <i class="fas fa-square"></i>
                         <a class="nav-link" id="nav-tab-2" data-toggle="tab" href="#tab-2" role="tab" aria-controls="tab-2" aria-selected="true">ABOUT</a>
-                        <i class="fas fa-square"></i>
-                    </li>
+                    </li><i class="fas fa-square"></i>
                     <li class="nav-item">
                         <a class="nav-link" id="nav-tab-3" data-toggle="tab" href="#tab-3" role="tab" aria-controls="tab-3" aria-selected="false">VISION</a>
                     </li>
