--- a/index.html
+++ b/index.html
@@ -314,10 +314,10 @@
                                 
                                 <!-- Icon Cards Pane -->
                                 <div class="col-lg-4">
-                                    This is the official Dragon Force Studio website for downloadable content for Minecraft: Bedrock Edition (previously known as Pocket Edition).
-                                    Here you will find high quality add-ons, maps, skins and everything is free to download.(Website started on March 30, 2020.)
+                                    This is the official Dragon Force Studio website for downloadable content for Minecraft: Bedrock Edition (previously known as Pocket Edition).<br>
+                                    Here you will find high quality add-ons, maps, skins and everything is free to download.<br>(Website started on March 30, 2020.)<br>
                                     
-                                    The people managing the website are in no affiliation with Mojang Studio.
+                                    The people managing the website are in no affiliation with Mojang Studio.<br>
                                     We just love Minecraft and want to offer Bedrock players some great content with our visitors!
                                 </div>
                                 <!-- end of icon cards pane -->
@@ -384,7 +384,7 @@
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Our business partners <a class="turquoise" href="https://discord.gg/DjVgZC3">TEAM ATLAS</a></div>
+                                <div class="media-body">Our partner <a class="turquoise" href="https://discord.gg/DjVgZC3">TEAM ATLAS</a></div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
