--- a/index.html
+++ b/index.html
@@ -315,10 +315,10 @@
                                 <!-- Icon Cards Pane -->
                                 <div class="col-lg-4">
                                     This is the official Dragon Force Studio website for downloadable content for Minecraft: Bedrock Edition (previously known as Pocket Edition).<br>
-                                    Here you will find high quality add-ons, maps, skins and everything is free to download.<br>(Website started on March 30, 2020.)<br>
+                                    Here you will find high quality add-ons, maps, skins and everything is free to download.<br><br>(Website started on March 30, 2020.)<br><br>
                                     
-                                    The people managing the website are in no affiliation with Mojang Studio.<br>
-                                    We just love Minecraft and want to offer Bedrock players some great content with our visitors!
+                                    Dragon Force Studio are in no affiliation with Mojang Studio.<br>
+                                    We just love Minecraft and want to offer Bedrock players some great content(add-ons, maps, skins)<br> to make the game more exciting and more enjoyable to play!
                                 </div>
                                 <!-- end of icon cards pane -->
                                 
