--- a/privacy.html
+++ b/privacy.html
@@ -121,6 +121,8 @@
     </header> <!-- end of header -->
     <!-- end of header -->
     
+
+    <div class="ex-basic-2">
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
@@ -131,7 +133,8 @@
                 At Dragon-force-studio.com, the privacy of our visitors is of extreme importance to us.<br>This privacy policy document outlines the types of personal information is received and collected by Dragon-force-studio.com and how it is used.
             </div>
         </div>
-    </div> 
+    </div>
+    </div>
 
 
 
