--- a/privacy.html
+++ b/privacy.html
@@ -127,7 +127,7 @@
         <div class="row">
             <div class="col-lg-6">
                 <h2> PRIVACY POLICY</h2>
-                If you require any more information or have any questions about our privacy policy,<br>please feel free to contact us by email at<br><br> support@dragon-force-studio.com
+                If you require any more information or have any questions about our privacy policy,<br>please feel free to contact us by email at<br><br> support@dragon-force-studio.com<br><br>
             </div>
             <div class="col-lg-6">
                 At Dragon-force-studio.com, the privacy of our visitors is of extreme importance to us.<br>This privacy policy document outlines the types of personal information is received and collected by Dragon-force-studio.com and how it is used.
