--- a/privacy.html
+++ b/privacy.html
@@ -121,7 +121,19 @@
     </header> <!-- end of header -->
     <!-- end of header -->
     
-
+    <!-- Breadcrumbs -->
+    <div class="ex-basic-1">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="breadcrumbs">
+                        <a href="https://dragon-force-studio.com/index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Skins</span>
+                    </div> <!-- end of breadcrumbs -->
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of ex-basic-1 -->
+    <!-- end of breadcrumbs -->
     <div class="ex-basic-2">
     <div class="container">
         <div class="row">
@@ -135,7 +147,20 @@
         </div>
     </div>
     </div>
-
+	
+    
+    <!-- Breadcrumbs -->
+    <div class="ex-basic-1">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="breadcrumbs">
+                        <a href="https://dragon-force-studio.com/index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Skins</span>
+                    </div> <!-- end of breadcrumbs -->
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of ex-basic-1 -->
 
 
     <!-- Footer -->
