--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="https://dragon-force-studio.com/pages/skins/page_1/skin_1.html"><span class="item-text">SKINS</span></a>
                         <div class="dropdown-items-divide-hr"></div>
-                        <a class="dropdown-item" href="#"><span class="item-text">MAPS</span></a>
+                        <a class="dropdown-item" href="https://dragon-force-studio.com/pages/maps/page_1/maps_1.html"><span class="item-text">MAPS</span></a>
                         <div class="dropdown-items-divide-hr"></div>
-                        <a class="dropdown-item" href="#"><span class="item-text">ADDONS</span></a>
+                        <a class="dropdown-item" href="https://dragon-force-studio.com/pages/addons/page_1/addons_1.html"><span class="item-text">ADDONS</span></a>
                         <div class="dropdown-items-divide-hr"></div>
                     </div>
                 </li>
