--- a/pages/addons/page_1/addons_1.html
+++ b/pages/addons/page_1/addons_1.html
@@ -169,7 +169,7 @@
                         <div class="row">
                             <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
                             <div class="col-lg-6">
-                                <img class="img-fluid" src="images/twiggy_skin_pack_cover.png" alt="alternative">
+                                <img class="img-fluid" src="images/ef_cover.png" alt="alternative">
                             </div>
                             <div class="col-lg-6">
                                 <h3>Expansive Fantasy</h3>
