--- a/pages/addons/page_1/addons_1.html
+++ b/pages/addons/page_1/addons_1.html
@@ -31,7 +31,7 @@
 	<link href="https://dragon-force-studio.com/css/styles.css" rel="stylesheet">
 	
 	<!-- Favicon  -->
-    <link rel="icon" href="images/pack_icon.png">
+    <link rel="icon" href="https://dragon-force-studio.com/images/pack_icon.png">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
     
@@ -50,7 +50,7 @@
     <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
 
         <!-- Image Logo -->
-        <a class="navbar-brand logo-image" href="index.html"><img src="images/DFS.svg" alt="DFS"></a> 
+        <a class="navbar-brand logo-image" href="index.html"><img src="https/dragon-force-studio.com/images/DFS.svg" alt="DFS"></a> 
         
         <!-- Mobile Menu Toggle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
