--- a/pages/addons/page_1/addons_1.html
+++ b/pages/addons/page_1/addons_1.html
@@ -50,7 +50,7 @@
     <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
 
         <!-- Image Logo -->
-        <a class="navbar-brand logo-image" href="index.html"><img src="https/dragon-force-studio.com/images/DFS.svg" alt="DFS"></a> 
+        <a class="navbar-brand logo-image" href="https://dragon-force-studio.com/index.html"><img src="https://dragon-force-studio.com/images/DFS.svg" alt="DFS"></a> 
         
         <!-- Mobile Menu Toggle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
