--- a/privacy.html
+++ b/privacy.html
@@ -10,8 +10,8 @@
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
 	<meta property="og:site_name" content="DRAGON FORCE STUDIO" /> <!-- website name -->
-	<meta property="og:site" content="https://dragon-force-studio.com" /> <!-- website link -->
-	<meta property="og:title" content="DRAGON FORCE STUDIO"/> <!-- title shown in the actual shared post -->
+	<meta property="og:site" content="" /> <!-- website link -->
+	<meta property="og:title" content=""/> <!-- title shown in the actual shared post -->
 	<meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
 	<meta property="og:image" content="images/dfs.jpg" /> <!-- image link, make sure it's jpg -->
 	<meta property="og:url" content="https://dragon-force-studio.com" /> <!-- where do you want your post to link to -->
@@ -23,15 +23,15 @@
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i" rel="stylesheet">
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/fontawesome-all.css" rel="stylesheet">
-    <link href="css/swiper.css" rel="stylesheet">
+    <link href="https://dragon-force-studio.com/css/bootstrap.css" rel="stylesheet">
+    <link href="https://dragon-force-studio.com/css/fontawesome-all.css" rel="stylesheet">
+    <link href="https://dragon-force-studio.com/css/swiper.css" rel="stylesheet">
 	<script data-ad-client="ca-pub-4398497222466431" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	<link href="css/magnific-popup.css" rel="stylesheet">
-	<link href="css/styles.css" rel="stylesheet">
+	<link href="https://dragon-force-studio.com/css/magnific-popup.css" rel="stylesheet">
+	<link href="https://dragon-force-studio.com/css/styles.css" rel="stylesheet">
 	
 	<!-- Favicon  -->
-    <link rel="icon" href="images/pack_icon.png">
+    <link rel="icon" href="https://dragon-force-studio.com/images/pack_icon.png">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
     
@@ -50,7 +50,7 @@
     <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
 
         <!-- Image Logo -->
-        <a class="navbar-brand logo-image" href="index.html"><img src="images/DFS.svg" alt="DFS"></a> 
+        <a class="navbar-brand logo-image" href="https://dragon-force-studio.com/index.html"><img src="https://dragon-force-studio.com/images/DFS.svg" alt="DFS"></a> 
         
         <!-- Mobile Menu Toggle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,7 +62,7 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="https://dragon-force-studio.com">HOME</a>
+                    <a class="nav-link page-scroll" href="https://dragon-force-studio.com#header">HOME</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="https://dragon-force-studio.com#members">MEMBERS</a>
@@ -74,9 +74,9 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="https://dragon-force-studio.com/pages/skins/page_1/skin_1.html"><span class="item-text">SKINS</span></a>
                         <div class="dropdown-items-divide-hr"></div>
-                        <a class="dropdown-item" href="#"><span class="item-text">MAPS</span></a>
+                        <a class="dropdown-item" href="https://dragon-force-studio.com/pages/maps/page_1/maps_1.html"><span class="item-text">MAPS</span></a>
                         <div class="dropdown-items-divide-hr"></div>
-                        <a class="dropdown-item" href="#"><span class="item-text">ADDONS</span></a>
+                        <a class="dropdown-item" href="https://dragon-force-studio.com/pages/addons/page_1/addons_1.html"><span class="item-text">ADDONS</span></a>
                         <div class="dropdown-items-divide-hr"></div>
                     </div>
                 </li>
@@ -127,7 +127,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumbs">
-                        <a href="https://dragon-force-studio.com/index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Skins</span>
+                        <a href="https://dragon-force-studio.com/index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Privacy Policy</span>
                     </div> <!-- end of breadcrumbs -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -136,7 +136,6 @@
     <!-- end of breadcrumbs -->
     <div class="ex-basic-2">
     <div class="container">
-        <div class="row">
             <div class="col-lg-6">
                 <h4> PRIVACY POLICY</h4>
                 If you require any more information or have any questions about our privacy policy,<br>please feel free to contact us by email at<br><br> support@dragon-force-studio.com<br><br>
@@ -144,7 +143,6 @@
             <div class="col-lg-6">
                 At Dragon-force-studio.com, the privacy of our visitors is of extreme importance to us.<br>This privacy policy document outlines the types of personal information is received and collected by Dragon-force-studio.com and how it is used.
             </div>
-        </div>
     </div>
     </div>
 	
@@ -155,7 +153,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumbs">
-                        <a href="https://dragon-force-studio.com/index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Skins</span>
+                        <a href="https://dragon-force-studio.com/index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Privacy Policy</span>
                     </div> <!-- end of breadcrumbs -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
